--- a/index.html
+++ b/index.html
@@ -3,11 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>50 WEB PROJECTS</title>
+    <link rel="stylesheet" href="src/styles.css">
+    <title>50 Web-Projects Showcase</title>
 </head>
 <body>
+    <header>
+        <h2>50 Web Projects By Yefri Encarmación</h2>
+    </header>
 
-    <script src="/src/main.js"></script>
+    <!-- 3D Carousel Container -->
+    <div class="carousel-container">
+        <div class="carousel">
+            <div class="carousel-item">Project 1</div>
+            <div class="carousel-item">Project 2</div>
+            <div class="carousel-item">Project 3</div>
+            <div class="carousel-item">Project 4</div>
+            <div class="carousel-item">Project 5</div>
+            <div class="carousel-item">Project 6</div>
+            <div class="carousel-item">Project 7</div>
+            <div class="carousel-item">Project 8</div>
+        </div>
+    </div>
+
+    <footer>
+        &copy; 2024 My Portfolio - All Rights Reserved
+    </footer>
+
+    <script src="src/main.js"></script>
 </body>
 </html>
