--- a/index.html
+++ b/index.html
@@ -4,26 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/styles.css">
+    <script src="https://kit.fontawesome.com/736a44c738.js" crossorigin="anonymous"></script>
     <title>50 Web-Projects Showcase</title>
 </head>
 <body>
     <header>
         <h2>50 Web Projects By Yefri Encarmación</h2>
     </header>
-
-    <!-- 3D Carousel Container -->
-    <div class="carousel-container">
-        <div class="carousel">
-            <div class="carousel-item">Project 1</div>
-            <div class="carousel-item">Project 2</div>
-            <div class="carousel-item">Project 3</div>
-            <div class="carousel-item">Project 4</div>
-            <div class="carousel-item">Project 5</div>
-            <div class="carousel-item">Project 6</div>
-            <div class="carousel-item">Project 7</div>
-            <div class="carousel-item">Project 8</div>
+    <main>
+        <!-- 3D Carousel Container -->
+        <div class="carousel-container">
+            <div class="carousel">
+                <div class="carousel-item">Project 1</div>
+                <div class="carousel-item">Project 2</div>
+                <div class="carousel-item">Project 3</div>
+                <div class="carousel-item">Project 4</div>
+                <div class="carousel-item">Project 5</div>
+                <div class="carousel-item">Project 6</div>
+                <div class="carousel-item">Project 7</div>
+                <div class="carousel-item">Project 8</div>
+            </div>
         </div>
-    </div>
+
+        <div class="project-manager">
+            <ul class="project-manager-list">
+                <li>Project 1</li>
+                <li>Project 2</li>
+                <li>Project 3</li>
+                <li>Project 4</li>
+                <li>Project 5</li>
+                <li>Project 6</li>
+                <li>Project 7</li>
+                <li>Project 8</li>
+            </ul>
+            <div class="project-manager-actions">
+                <button class="back"><i class="fa-solid fa-arrow-left"></i></button>
+                <button class="next"><i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </div>
+    </main>
 
     <footer>
         &copy; 2024 My Portfolio - All Rights Reserved
