--- a/day47-testimonial-box-switcher/index.html
+++ b/day47-testimonial-box-switcher/index.html
@@ -3,25 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script defer src="main.js"></script>
     <title>Testimonial Box Switcher</title>
 </head>
 <body>
-    <main class="testimonial">
-        <div class="testimonial-loader"></div>
-        <p class="testimonial-content">
-            I had my concerns that due to a tight deadline this project can't be done. But this guy proved me wrong not only he delivered an outstanding work but he managed to deliver 1 day prior to the deadline. And when I asked for some revisions he made them in MINUTES. I'm looking forward to work with him again and I totally recommend him. Thanks again!
-        </p>
-        <div class="testimonial-author">
-            <figure class="testimonial-author-avatar">
-                <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="author avatar">
-            </figure>
-            <div>
-                <h4 class="testimonial-author-name">Veeti Seppanen</h4>
-                <span class="testimonial-author-position">Marketing</span>
-            </div>
-        </div>
+    <main class="testimonial" id="wrapper">
+        <!-- testimonial content here -->
+        <div class="loader"></div>
+        <h2 style="margin: 10px auto; width: max-content;">Testimonials Loading...</h2>
     </main>
 </body>
 </html>
