Adding projects showcase to main page.

--- a/index.html
+++ b/index.html
@@ -13,39 +13,31 @@
     </header>
     <main>
         <!-- 3D Carousel Container -->
-        <div class="carousel-container">
-            <div class="carousel">
-                <div class="carousel-item">Project 1</div>
-                <div class="carousel-item">Project 2</div>
-                <div class="carousel-item">Project 3</div>
-                <div class="carousel-item">Project 4</div>
-                <div class="carousel-item">Project 5</div>
-                <div class="carousel-item">Project 6</div>
-                <div class="carousel-item">Project 7</div>
-                <div class="carousel-item">Project 8</div>
-            </div>
-        </div>
+         <div class="scene">
+             <div class="carousel-container">
+                 <div class="carousel">
+                     <!-- Projects Cards goes Here -->
+                 </div>
+             </div>
+         </div>
 
         <div class="project-manager">
-            <ul class="project-manager-list">
-                <li>Project 1</li>
-                <li>Project 2</li>
-                <li>Project 3</li>
-                <li>Project 4</li>
-                <li>Project 5</li>
-                <li>Project 6</li>
-                <li>Project 7</li>
-                <li>Project 8</li>
-            </ul>
+            <ol class="project-manager-list">
+                <!-- Projects Items Here! -->
+            </ol>
             <div class="project-manager-actions">
-                <button class="back"><i class="fa-solid fa-arrow-left"></i></button>
-                <button class="next"><i class="fa-solid fa-arrow-right"></i></button>
+                <button id="goBackBtn" class="back">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </button>
+                <button id="goNextBtn" class="next">
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
             </div>
         </div>
     </main>
 
     <footer>
-        &copy; 2024 My Portfolio - All Rights Reserved
+        &copy; 2024 Web Projects - Designed By YeffEJ
     </footer>
 
     <script src="src/main.js"></script>
