completing main page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        &copy; 2024 Web Projects - Designed By YeffEJ
+        &copy; 2024 Web Projects - Designed By YeffEJ using HTML/CSS and vanilla JS 
     </footer>
 
     <script src="src/main.js"></script>
