--- a/day1-expanding-cards/index.html
+++ b/day1-expanding-cards/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Expanding Cards</title>
 </head>
 <body>
+    <h2 class="title">Click On The Cards To See The Animation</h2>
     <div class="wrapper">
         <div class="card">
             <label>Explore the Mountains</label>
