--- a/day2-progress-steps/index.html
+++ b/day2-progress-steps/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="./src/styles.css">
     <title>Progress Steps</title>
 </head>
 <body>
@@ -29,6 +29,6 @@
         </div>
     </div>
 
-    <script src="/src/main.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 </html>
