--- a/day3-rotating-navigation/index.html
+++ b/day3-rotating-navigation/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/736a44c738.js" crossorigin="anonymous"></script>
     <title>Rotating Navigation</title>
 </head>
@@ -49,6 +49,6 @@
         </ul>
     </nav>
 
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
