--- a/day41-verify-account-ui/index.html
+++ b/day41-verify-account-ui/index.html
@@ -13,7 +13,7 @@
 <body>
     <main class="verifier">
         <h1 class="title">Verify Your Account</h1>
-        <p class="description">We emailed you the six digit code to cool_guy@email.com
+        <p class="description">We emailed you the six digit code to example_person@email.com
             Enter the code below to confirm your email address.</p>
         <form class="codes" id="codesForm" autocomplete="off">
             <div class="code">
